--- a/src/app/bmx/bmx-creator/project-information/project-information.component.scss
+++ b/src/app/bmx/bmx-creator/project-information/project-information.component.scss
@@ -14,3 +14,9 @@
   box-shadow: revert ;
   outline: revert;
 }
+
+.optionButton{
+  visibility: hidden;
+}
+
+.directorCard:hover > .optionButton { visibility: visible; }
