--- a/src/app/bmx/bmx-creator/image-uploader/image-uploader.component.html
+++ b/src/app/bmx/bmx-creator/image-uploader/image-uploader.component.html
@@ -9,7 +9,7 @@
         <div
             style="display: flex;flex-direction:column; justify-content: space-evenly; align-items: center;border: grey dashed 3px; width: 300px; height: 200px;margin-left: 20px;">
             <input type="file" class="file-input" (change)="onFileSelected($event)" #fileUpload style="display: none;"
-                multiple accept="image/*">
+                multiple>
 
             <mat-icon style="color: #003180; font-size: 90px; margin-top: -20px; height: 10px;width: 90px;">
                 cloud_upload</mat-icon>
