--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
@@ -66,7 +66,7 @@
   flex-direction: column;
   align-items: center;
   justify-items: center;
-  overflow-x: scroll;
+  // overflow-x: scroll;
 }
 
 
