--- a/src/app/bmx/bmx-creator/project-information/project-information.component.html
+++ b/src/app/bmx/bmx-creator/project-information/project-information.component.html
@@ -142,7 +142,7 @@
                 </div>
                 <div class="optionButton">
                     <div *ngIf="canEdit !== i; else elseBlock">
-                        <button mat-icon-button style="position: absolute; top: 9px; right: 5px;color: grey;"
+                        <button mat-icon-button style="position: absolute; top: 9px; right: 5px;color: #053074;"
                             (click)="editDirector(i)" >
                             <mat-icon>edit</mat-icon>
                         </button>
