rank table css fixed

--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.scss
@@ -48,6 +48,14 @@
   padding: 20px;
   // margin: 5px;
 }
+.red:first-child{
+  background-color: white;
+  border-right: rgb(231, 230, 230) 1px solid;
+  border-left: rgb(231, 230, 230) 1px solid;
+  border-top: rgb(231, 230, 230) 1px solid;
+  padding: 20px;
+  // margin: 5px;
+}
 
 .blue{
   background-color: white;
