narrow down template and image template were extended from the rating scale compoenent

--- a/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -68,6 +68,20 @@
             </div>
             <!-- END RANK SCALE 😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭 -->
 
+            <!-- RANK SCALE 😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭-->
+            <div *ngIf="bmxItem.componentType === 'narrow-down'" class="paragraph">
+                <div class="emoji-handle">.</div>
+                <div style="position: absolute;right: 0px;">
+                    <button *ngIf="bmxClientPageOverview"  matTooltip="double click to delete" matTooltipPosition="above"
+                    style="outline: none;color:#f10a0a;top: 19px;" mat-icon-button (dblclick)="deleteComponent(i)"
+                        aria-label="delte">
+                        <mat-icon style="font-size: 17px;">cancel</mat-icon>
+                    </button>
+                </div>
+                <app-narrow-down [bmxItem]="bmxItem" [i]="i" [bmxClientPageDesignMode]="bmxClientPageDesignMode" [bmxClientPageOverview]="bmxClientPageOverview"></app-narrow-down>
+            </div>
+            <!-- END RANK SCALE 😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭 -->
+
             <!-- IMAGE SCALE 👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀-->
             <div *ngIf="bmxItem.componentType === 'image-rate-scale'" class="paragraph">
                 <div class="emoji-handle">.</div>
@@ -129,6 +143,10 @@
             <button (click)="createNewBmxComponent('ranking-scale')" matTooltip="rank table" matTooltipPosition="right"
                 mat-icon-button color="warn" aria-label="aria">
                 <mat-icon class="full-icon">trending_down</mat-icon>
+            </button>
+            <button (click)="createNewBmxComponent('narrow-down')" matTooltip="rank table" matTooltipPosition="right"
+                mat-icon-button color="warn" aria-label="aria">
+                <mat-icon class="full-icon">rule</mat-icon>
             </button>
             <button (click)="createNewBmxComponent('image-rate-scale')" matTooltip="image rate table" matTooltipPosition="right"
                 mat-icon-button color="warn" aria-label="aria">
