rankin matrix bugs done

--- a/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -136,19 +136,19 @@
                 matTooltipPosition="right">
                 <mat-icon class="full-icon">note_add</mat-icon>
             </button>
-            <button (click)="createNewBmxComponent('rate-scale')" matTooltip="rating table" matTooltipPosition="right"
+            <button (click)="createNewBmxComponent('rate-scale')" matTooltip="rating matrix" matTooltipPosition="right"
                 mat-icon-button color="warn" aria-label="aria">
                 <mat-icon class="full-icon">grading</mat-icon>
             </button>
-            <button (click)="createNewBmxComponent('ranking-scale')" matTooltip="rank table" matTooltipPosition="right"
+            <button (click)="createNewBmxComponent('ranking-scale')" matTooltip="rank matrix" matTooltipPosition="right"
                 mat-icon-button color="warn" aria-label="aria">
                 <mat-icon class="full-icon">trending_down</mat-icon>
             </button>
-            <button (click)="createNewBmxComponent('narrow-down')" matTooltip="rank table" matTooltipPosition="right"
+            <button (click)="createNewBmxComponent('narrow-down')" matTooltip="Narrow Down" matTooltipPosition="right"
                 mat-icon-button color="warn" aria-label="aria">
                 <mat-icon class="full-icon">rule</mat-icon>
             </button>
-            <button (click)="createNewBmxComponent('image-rate-scale')" matTooltip="image rate table" matTooltipPosition="right"
+            <button (click)="createNewBmxComponent('image-rate-scale')" matTooltip="image rate matrix" matTooltipPosition="right"
                 mat-icon-button color="warn" aria-label="aria">
                 <mat-icon class="full-icon">image</mat-icon>
             </button>
