--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -80,7 +80,7 @@
     <hr>
     <div style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;">
         <div>
-            <div style="font-size: 16px;margin-top: 10px;color: #48535e;">SELECT RATING RANGE</div>
+            <div style="font-size: 16px;margin-top: 10px;color: #48535e;">SELECT RANKIN RANGE</div>
             <br>
 
             <div style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;">
@@ -171,6 +171,11 @@
         <input type="range" style="margin: 20px;width: 140px;" [(ngModel)]="bmxItem.componentSettings[0].rowHeight"
             class="slider-font-size" tickInterval="1" min="2" max="20" [value]="bmxItem.componentSettings[0].rowHeight">
     </div>
+    <div *ngIf="radioColumnCounter > 1" style="display: flex;flex-direction: column;align-items: center;">
+        <p style="margin: 0 0 -12px;color: grey;">radio Columns width: {{bmxItem.componentSettings[0].radioColumnsWidth}} px</p>
+        <input type="range" style="margin: 20px;width: 140px;" [(ngModel)]="bmxItem.componentSettings[0].radioColumnsWidth"
+            class="slider-font-size" tickInterval="1" min="50" max="100" [value]="bmxItem.componentSettings[0].radioColumnsWidth">
+    </div>
 </div>
 <!-- <mat-slider min="200" max="500" step="10" value="200" [(value)]="bmxItem.componentSettings[0].columnWidth"></mat-slider><p>{{bmxItem.componentSettings[0].columnWidth}}</p> -->
 <!-- ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺  END  ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺ -->
@@ -218,7 +223,12 @@
 
             <div *ngFor="let columnName of columnsNames; let e =  index"
                 style="display: flex;align-items: center;justify-content: center;" [ngClass]="(e%2==0)?'red':'blue'"
-                [style.width]="(columnName == 'rationale' )?bmxItem.componentSettings[0].rationalewidth + 'px':bmxItem.componentSettings[0].columnWidth +'px'">
+                [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px': 
+                ( (columnName.includes('RadioColumn'))?bmxItem.componentSettings[0].radioColumnsWidth + 'px' :
+                bmxItem.componentSettings[0].columnWidth + 'px' )">
+                <!-- (columnName == 'RadioColumn1)?bmxItem.componentSettings[0].radioColumnsWidth + 'px': 
+                bmxItem.componentSettings[0].columnWidth + 'px' -->
+                <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 HEADER TEXT AREA 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
 
                 <div *ngIf="(y == 0)" class="header-title" (mouseenter)="selectedColumn = e"
                     (mouseleave)="selectedColumn = ''">
@@ -228,21 +238,11 @@
                         class="header-delete-icon" matTooltip="double click to delete column" matTooltipPosition="above"
                         (dblclick)="deleteColumn(columnName)">x</span>
 
-                    <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 HEADER TEXT AREA 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
 
                     <textarea *ngIf="y == 0 && editSingleTableCells"
                         [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
                         style="text-align: center; font-weight: bold;color: #324395;" class="row-box"
                         [(ngModel)]="testName[columnName]" value="testName[columnName]"></textarea>
-
-                    <!-- <textarea *ngIf=" editSingleTableCells " 
-                    [style.width]="bmxItem.componentSettings[0].rationalewidth + 'px'" 
-                        [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'" cdkTextareaAutosize
-                        [cdkAutosizeMinRows]="(testName[columnName].length > 50)?bmxItem.componentSettings[0].rowHeight:2"
-                        style="outline: none;text-align: center;" class="row-box"
-                        [(ngModel)]="testName[columnName]"></textarea>cev -->
-
-
 
 
                     <p style="text-align: center; font-weight: bold;color: #324395;margin: 0 0 0px;"
