--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.scss
@@ -76,7 +76,7 @@
   flex-direction: column;
   align-items: center;
   justify-items: center;
-  overflow-x: scroll;
+  // overflow-x: scroll;
 }
 
 
@@ -122,6 +122,7 @@
 .test-name-table {
   display: flex;
   flex-direction: row;
+  background-color: #2a6495;
 }
 
 .test-name-table:hover {
